--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
         <div class="container">
             <div class="intro">
                 <h2 class="text-center">Join the community! #BlerdDating</h2>
-                <p class="text-center">Discover the community where you belong&nbsp;</p>
+                <p class="text-center">Discover a community where we all belong&nbsp;</p>
             </div>
-            <form class="form-inline" data-bss-recipient="25fa3d5a584d44de217a3185ffba8337">
+            <form class="form-inline" id="contact" data-bss-recipient="25fa3d5a584d44de217a3185ffba8337">
                 <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Your Email" required=""></div>
                 <div class="form-group"><button class="btn btn-primary" type="submit">Subscribe </button></div>
             </form>
         </div>
     </div>
-    <section id="contact" class="contact bg-primary">
+    <section class="contact bg-primary">
         <div class="container">
             <h2><span>We&nbsp;</span><i class="fa fa-heart"></i><span>&nbsp;new friends!</span></h2>
             <ul class="list-inline list-social">
